chore: Fix button alignment on hover

--- a/src/patterns/FiltersInline/_filterButton.scss
+++ b/src/patterns/FiltersInline/_filterButton.scss
@@ -7,7 +7,8 @@
   padding: $spacing-xsm $spacing-sm;
 
   &:hover {
-    border: none;
+    border: 1px solid $black-100;
+    box-shadow: none;
   }
 
   &:focus-visible {
